--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<![endif]-->
 
 		<header class="container-fluid header sticky-top" id="header">
-			<nav class="navbar navbar-expand-lg navbar-light">
+			<nav class="navbar navbar-expand-lg navbar-light ps-3">
 				<div class="container">
 					<div>
 						<a href="#"
@@ -165,7 +165,7 @@
 									src="./images/krakenimages-376KN_ISplE-unsplash.jpg"
 									alt="Card image cap"
 								/>
-								<div class="card-body">
+								<div class="card-body text-md-start text-center">
 									<h5 class="card-title">Lorem ipsum</h5>
 									<p class="card-text">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -189,7 +189,7 @@
 									src="./images/krakenimages-376KN_ISplE-unsplash.jpg"
 									alt="Card image cap"
 								/>
-								<div class="card-body">
+								<div class="card-body text-md-start text-center">
 									<h5 class="card-title">Lorem ipsum</h5>
 									<p class="card-text">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
@@ -213,7 +213,7 @@
 									src="./images/krakenimages-376KN_ISplE-unsplash.jpg"
 									alt="Card image cap"
 								/>
-								<div class="card-body">
+								<div class="card-body text-md-start text-center">
 									<h5 class="card-title">Lorem ipsum</h5>
 									<p class="card-text">
 										Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
