--- a/index.html
+++ b/index.html
@@ -32,14 +32,9 @@
 
 		<header class="container-fluid header sticky-top" id="header">
 			<nav class="navbar navbar-expand-lg navbar-light">
-				<div class="container">
+				<div class="container mt-4">
 					<div>
-						<a href="#"
-							><img
-								class="logo"
-								src="./images/HSF_Logo_Light.png"
-								alt="HSF logo"
-						/></a>
+						<a href="#"><div class="logo" id="logo"></div></a>
 					</div>
 
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -366,16 +361,76 @@
 			<!-- /Membership section  -->
 
 			<!-- advert section -->
+			<div class="container-fluid advertisement-section">
 
-				<!-- headline -->
+				<div class="container">
+					<!-- row 1-->
+					
+					<div class="row">
+						<div class="col-12 col-lg-5 offset-lg-1 mb-5 mb-lg-0">
+							<div class="row mb-4">
+								<hr class="col-2 col-sm-2 col-md-3 col-lg-1 col-xl-2">
+								<div class="col-6 col-sm-5 col-md-4 col-lg-7 col-xl-6 text-center">
+									<span class="featured-headline">Featured Member</span>
+								</div>
+								<hr class="col-2 col-sm-2 col-md-3 col-lg-1 col-xl-2">
+							</div>
 
-				<!-- featrued members element -->
-				<!-- /featrued members element -->
+							<div class="row">
+								<div class="col-12 border-primary-color featured-container">
+									<div class="row  align-items-center">
+										<div class="col-6">
+											<img class="featured-img col-12"  src="./images/featured-img.PNG" alt="Featured member logo">
+											<a href="#" class="col-12">
+												<span class="featured-link">www.loremipsem.com</span>
+											</a>
+										</div>
+										<div class="col-6">
+											<span class="d-inline-block featured-copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+											</span>
+											<a href="#" class="d-inline-block mt-5">
+												<span class="featured-link">Read More</span>
+											</a>
+										</div>
+									</div>
+								</div>
 
-				<!-- classifieds advert element -->
-				<!-- /classifieds advert element -->
+							</div>
 
+						</div>
+
+						<div class="col-12 col-lg-5 offset-lg-1">
+							<div class="row mb-4">
+								<hr class="col-2 col-sm-2 col-md-3 col-lg-1 col-xl-2">
+								<div class="col-6 col-sm-5 col-md-4 col-lg-7 col-xl-6 text-center">
+									<span class="classified-headline">HSF Classifieds</span>
+								</div>
+								<hr class="col-2 col-sm-2 col-md-3 col-lg-1 col-xl-2">
+							</div>
+
+							<div class="row">
+								<div class="col-12 border-primary-color classifieds-container">
+									<div class="row">
+										<img class="col-4 featured-img"  src="./images/featured-img.PNG" alt="Featured member logo">
+
+										<img class="col-4 featured-img"  src="./images/featured-img.PNG" alt="Featured member logo">
+
+										<img class="col-4 featured-img"  src="./images/featured-img.PNG" alt="Featured member logo">
+
+									</div>
+								</div>
+
+							</div>
+
+						</div>
+						
+					</div>
+					<!-- /row 1-->
+				</div>
+
+			</div>
 			<!-- /advert section -->
+
 		</main>
 
 		<!-- footer -->
@@ -482,6 +537,7 @@
 
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+		<script src="js/index.js"></script>
 	
 	</body>
 </html>
