--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<div class="row">
 						<div class="card-deck justify-content-around">
 
-							<div class="card col-10 offset-1 col-sm-10 offset-sm-2 col-lg-3 offset-lg-0">
+							<div class="card col-10 offset-1 col-sm-10 offset-sm-2 col-lg-3 offset-lg-0 bounceIn" data-delay="0s">
 								<img src="./images/krakenimages-376KN_ISplE-unsplash.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">Article title</h5>
@@ -136,7 +136,7 @@
 								</div>
 							</div>
 
-							<div class="card col-10 offset-1 col-sm-10 offset-sm-2  col-lg-3 offset-lg-0">
+							<div class="card col-10 offset-1 col-sm-10 offset-sm-2  col-lg-3 offset-lg-0 bounceIn" data-delay=".2s">
 								<img src="./images/krakenimages-376KN_ISplE-unsplash.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">Article title</h5>
@@ -145,7 +145,7 @@
 								</div>
 							</div>
 
-							<div class="card col-10 offset-1 col-sm-10 offset-sm-2 col-lg-3 offset-lg-0">
+							<div class="card col-10 offset-1 col-sm-10 offset-sm-2 col-lg-3 offset-lg-0 bounceIn" data-delay=".5s">
 								<img src="./images/krakenimages-376KN_ISplE-unsplash.jpg" class="card-img-top" alt="...">
 								<div class="card-body">
 									<h5 class="card-title">Article title</h5>
@@ -221,7 +221,7 @@
 
 						</div>	
 						
-						<div class="training-img"></div>
+						<div class="training-img bounceIn" data-delay="0s"></div>
 						<!-- row 4-->
 						<div class="row">
 							<div class="col-9 offset-3 col-sm-7 offset-sm-4 col-md-6 offset-md-5 col-lg-5 offset-lg-5 col-xl-4 offset-xl-6 background-el-small-bot-el-one quaternary-color-light"></div>
@@ -279,7 +279,7 @@
 
 						</div>	
 						
-						<div class="jobs-img"></div>
+						<div class="jobs-img bounceIn" data-delay=".3s"></div>
 						<!-- row 4-->
 						<div class="row">
 							<div class="col-9 offset-3 col-sm-7 offset-sm-4 col-md-6 offset-md-2 col-lg-6 offset-lg-1 col-xl-6 offset-xl-2 background-el-small-bot-el-one bg-primary-color-light"></div>
@@ -322,7 +322,7 @@
 								</div>
 								<!-- /row 2-->
 
-								<div class="membership-img"></div>
+								<div class="membership-img bounceIn" data-delay=".5s"></div>
 								<!-- row 3-->
 								<div class="row">
 
